--- a/pulsed.tex
+++ b/pulsed.tex
@@ -328,6 +328,8 @@ The value of the coupling coefficient, k, is always less than (or equal to) 1, b
 
 \subsection{Reasoning the Pulse Length}
 
+\label{section:pulse}
+
 This subsection focuses on a quantitative estimate for how to select a pulse length. As no fusion reactor exists in the world today, the writers believed this to be an acceptable calculation. Further, the resulting length of two hours matches the length of other studies in the literature.
 
 Starting at the end, our goal is to find the pulse length of a tokamak reactor in seconds.  The first piece of information is the expected lifetime of the central solenoid, $ N \approx 10 \ \textnormal{years} $. The next is the desired number of shots the machine will likely have, $ M \approx 50,000 \ \textnormal{shots} $. This gives the ballpark estimate of around 10 pulses a day -- or a pulse length of two hours.
